--- a/blurringview/build.gradle
+++ b/blurringview/build.gradle
@@ -1,18 +1,14 @@
 apply plugin: 'com.android.library'
 
-
 android {
-    compileSdkVersion 22
-    buildToolsVersion "21.1.2"
+    compileSdkVersion 23
+    buildToolsVersion '23.0.1'
 
     defaultConfig {
-        minSdkVersion 15
-        targetSdkVersion 22
-        versionCode 1
-        versionName "1.0"
-        renderscriptTargetApi 21
-        renderscriptSupportModeEnabled true
+        minSdkVersion 17
+        targetSdkVersion 17
     }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -22,5 +18,5 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
 }
